salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Dim_Warehouse_Zone__dll/Desktop___Dim_Warehouse_Zone__dll.object-meta.xml
<CustomObject>
    <label>Desktop - Dim_Warehouse_Zone</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>