salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Dim_Warehouse_Zone__dll/fields/Zone_Automation_Level__c.field-meta.xml
<CustomField>
    <fullName>Zone_Automation_Level__c</fullName>
    <label>Zone Automation Level</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Zone_Automation_Level</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>