salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Dim_Warehouse_Zone__dll/fields/Zone_Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Zone_Max_Capacity__c</fullName>
    <label>Zone Max Capacity</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Zone_Max_Capacity</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>