salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Dim_Warehouse_Zone__dll/fields/Zone_Temperature_Type__c.field-meta.xml
<CustomField>
    <fullName>Zone_Temperature_Type__c</fullName>
    <label>Zone Temperature Type</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Zone_Temperature_Type</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>