salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Dim_Warehouse_Zone__dll/fields/ZoneID__c.field-meta.xml
<CustomField>
    <fullName>ZoneID__c</fullName>
    <label>ZoneID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ZoneID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>